welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: ambiguous reference to overloaded definition,
both method | in class Int of type (x: Char)Int
and  method | in class Int of type (x: Byte)Int
match expected type ?
  } else if (x=10+y | x=10+z){
                    ^blueTicket:10: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (x=10+y | x=10+z){
              ^